--- a/.env.local
+++ b/.env.local
@@ -3,6 +3,6 @@
 # The Vite proxy handles routing to :3000/api
 
 VITE_API_BASE_URL=http://localhost:3000/api
-VITE_TOKEN_KEY=culturevault_token
-VITE_USER_KEY=culturevault_user
+VITE_TOKEN_KEY=sen_token
+VITE_USER_KEY=sen_user
 VITE_API_TIMEOUT=30000
