--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@pixi/react": "^7.1.2",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.0",
     "axios": "^1.6.2",
@@ -22,6 +23,7 @@
     "immer": "^10.0.3",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "pixi.js": "^7.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
