--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,17 +3,21 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@services/*": ["src/services/*"],
-      "@store/*": ["src/store/*"],
-      "@utils/*": ["src/utils/*"],
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
-      "@routes/*": ["src/routes/*"]
+      "@services/*": ["src/services/*"],
+      "@utils/*": ["src/utils/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@store/*": ["src/store/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@assets/*": ["src/assets/*"],
+      "@config/*": ["src/config/*"]
     },
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "checkJs": true // Bật tính năng kiểm tra lỗi JS cơ bản
   },
-  "include": ["src"]
+  "include": ["src", "vite.config.js"]
 }
