--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.5.0",
     "react-helmet-async": "^2.0.4",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.0.4",
