feat: Introduce dedicated layouts for Admin, Customer, and Researcher roles using a new UnifiedLayout component.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@ant-design/pro-components": "^2.8.10",
     "@pixi/react": "^7.1.2",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.0",
