--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "pixi.js": "^7.4.3",
+    "polished": "^4.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
