feat: Integrate AI Chat into QuickActionButtons
- Add AI Chat button to vertical action stack
- Integrate AIChatPanel with default character (Minh)
- Add AIChatFloatingButton and AIChatPanel components
- Fix chat history format and clearHistory endpoint
- Update Docker configs for Frontend

--- a/Docker/Dev/Dockerfile
+++ b/Docker/Dev/Dockerfile
@@ -1,19 +1,20 @@
 # ============================================
 # SEN Frontend - Dockerfile (Development)
 # Hot-reload enabled with Vite
+# Optimized with layer caching
 # ============================================
 
 FROM node:20-alpine
 
 WORKDIR /app
 
-# Copy package files
+# Copy package files FIRST (cached if unchanged)
 COPY package*.json ./
 
-# Install all dependencies
+# Install dependencies (cached if package.json unchanged)
 RUN npm install
 
-# Copy source code
+# Copy source code LAST (this changes often)
 COPY . .
 
 # Expose Vite dev server port
