--- a/Docker/Production/docker-compose.yml
+++ b/Docker/Production/docker-compose.yml
@@ -10,8 +10,9 @@ services:
       args:
         - VITE_API_BASE_URL=/api
         - VITE_API_TIMEOUT=30000
+    image: production-sen-frontend
     container_name: sen-frontend
-    restart: unless-stopped
+    restart: always
     ports:
       - "80:80"
     networks:
@@ -22,8 +23,24 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    labels:
+      - "com.sen.service=frontend"
+      - "com.sen.environment=production"
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.5'
+          memory: 256M
 
 networks:
   sen-network:
     name: sen-network
-    external: true
+    driver: bridge
