--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/pro-components": "^2.8.10",
     "@pixi/react": "^7.1.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tinymce/tinymce-react": "^4.3.2",
     "antd": "^5.12.0",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
@@ -36,7 +37,8 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "tinymce": "^6.8.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
