--- a/Docker/Dev/docker-compose.yml
+++ b/Docker/Dev/docker-compose.yml
@@ -12,8 +12,10 @@ services:
     container_name: sen-frontend-dev
     restart: unless-stopped
     environment:
-      - VITE_API_BASE_URL=http://localhost:3000/api
+      - VITE_API_BASE_URL=/api
       - VITE_API_TIMEOUT=30000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     ports:
       - "3001:3001"
     volumes:
