--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "framer-motion": "^12.23.24",
+    "highcharts": "^12.5.0",
+    "highcharts-react-official": "^3.2.3",
+    "html5-qrcode": "^2.3.8",
     "immer": "^10.0.3",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "pixi.js": "^7.4.3",
     "polished": "^4.3.1",
+    "proj4": "^2.20.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
