--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "polished": "^4.3.1",
     "proj4": "^2.20.2",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
